tests/baselines/reference/moduleAssignmentCompat4.errors.txt
==== tests/cases/compiler/moduleAssignmentCompat4.ts (2 errors) ====
    module A {
       export module M {
            class C { }
        }
    }
    module B {
        export module M {
            export class D { }
        }
    }
    
    var a: A;
           ~
!!! moduleAssignmentCompat4.ts(12,8): error TS4022: Type reference cannot refer to container 'A'.
    var b: B;
           ~
!!! moduleAssignmentCompat4.ts(13,8): error TS4022: Type reference cannot refer to container 'B'.
    
    a = b;
    b = a; // error